<resources>
    <string name="app_name">Compass Plus</string>
    <string name="keywords_search_compass">Compass;Calibrate compass;Pressure;Altitude;Latitude;Longtitude;Check longtitude; Check latitude;Compass;Compass app;Compass app;Where is Compass;Download Compass;Atmospheric pressure; Check altitude;How much is the altitude</string>
    <string name="app_label">Compass Plus</string>
    <string name="cannot_get_location">--</string>
    <string name="location_north">NL</string>
    <string name="location_south">SL</string>
    <string name="location_east">EL</string>
    <string name="location_west">WL</string>
    <string name="calibrate_success">Calibrated</string>
    <string name="calibrate_failed_no_location">"Can't calibrate"</string>
    <string name="calibrate_failed_timeout">"Can't connect to the server"</string>
    <string name="calibrate_failed">Calibrating altitude failed</string>
    <string name="pressure_title">Pressure</string>
    <string name="altitude_title">Altitude</string>
    <string name="pressure">%.1fhPa</string>
    <string name="altitude">%.1fm</string>
    <string name="pressure_unit">hPa</string>
    <string name="altitude_unit">m</string>
    <string name="angle">%.0f</string>
    <string name="dialog_title_no_network">Turn on Network</string>
    <string name="dialog_body_no_network">"Can't connect to network"</string>
    <string name="dialog_calibrat_altitude">Calibrating…</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="lat_long" formatted="false">LAT: %.2f LON: %.2f</string>
    <string name="direction_north">N</string>
    <string name="direction_south">S</string>
    <string name="direction_east">E</string>
    <string name="direction_west">W</string>
    <string name="direction_north_east">NE</string>
    <string name="direction_north_west">NW</string>
    <string name="direction_south_east">SE</string>
    <string name="direction_south_west">SW</string>
    <string name="guide_toast">To calibrate, move your phone in the motion below.</string>
    <string name="mobiledata_alert_dialog_title">Data usage warning</string>
    <string name="mobiledata_alert_dialog_message">Connect to the internet to calibrate altitude?</string>
    <string name="do_not_show_next_time">"Don't show again"</string>
    <string name="location_not_enabled_title">Location services</string>
    <string name="location_not_enabled_summary">Compass needs to access your location in order to display coordinates and altitude.</string>
    <string name="location_enable">Allow</string>
    <string name="location_enable_later">Later</string>
    <string name="location_enabled">You can turn off location services any time in Settings.</string>
    <string name="first_using_dialog_title">Access permission</string>
    <string name="first_using_dialog_message">"Compass needs to use your device's network connection, camera, and location services to work normally."</string>
    <string name="using_camera_confirm_ok">Agree</string>
    <string name="using_camera_confirm_cancel">Exit</string>
    <string name="shake_enter_tip">Shake to calibrate</string>
    <string name="calibrate_title">Calibrate compass</string>
    <string name="calibrate_tip">Tilt your device to roll the ball around the circle</string>
    <string name="calibrate_rotate_again">Try again</string>
    <string name="error_camera_unavailable_title">Camera unavailable</string>
    <string name="error_camera_unavailable">Check if another app is currently using Camera.</string>
    <string name="altitude_uncalibrate_tip">"Can't calibrate altitude"</string>
    <string name="altitude_uncalibrate_msg">"Can't calibrate altitude accurately without GPS or mobile data connection."</string>
    <string name="altitude_uncalibrate_refresh">Try again</string>
    <string name="altitude_uncalibrate_cancel">Cancel</string>
    <string name="altitude_longitude_Degree_format" formatted="false">"%d°%d'%d\""</string>
    <string name="app_description_title">About compass</string>
    <string name="app_description_content">Compass is used for navigation and orientation and shows you direction. Make sure you can do without these features before you uninstall the app.</string>
    <string name="magenatic_unit">%.0f µT</string>
    <string name="magenatic_field">Magenatic Field</string>
    <string name="pro_version_removes_ads_and_support_us_to_make_the_app_better">Pro version removes ads and support us to make the app better.</string>
    <string name="pro_upgrade">PRO UPGRADE</string>
    <string name="general">General</string>
    <string name="show_magnetic_field_strength">Show static information</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="advanced">Advanced</string>
    <string name="sensor_status">Sensor status</string>
    <string name="buy_me_a_beer">Buy me a beer!</string>
    <string name="please_support_us_to_make_it_better">Please support us to make it better!</string>
    <string name="settings">Settings</string>
    <string name="dark_style">Dark Style</string>
    <string name="light_style">Light Style</string>
    <string name="theme_gallery">Themes Gallery</string>
    <string name="choose">CHOOSE</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="don_t_ask_again">DON’T ASK AGAIN</string>
    <string name="location">Location</string>
    <string name="you_are_here">YOU ARE HERE</string>
    <string name="thanks_update_pro">Thanks for update to PRO</string>
    <string name="thanks_buy_beer">Thanks for buy beer</string>
    <string name="double_click_exit">Double Click to exit app</string>
    <string name="false_str" translatable="false">false</string>
</resources>
