<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:id="@+id/layout_pro"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="6sp"
            android:paddingRight="16dp"
            android:text="@string/pro_version_removes_ads_and_support_us_to_make_the_app_better"
            android:textColor="#de000000"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/pro_update"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_button_pro"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:text="@string/pro_upgrade"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="10sp"
            android:text="@string/general"
            android:textColor="#de000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="6sp"
                android:text="@string/show_magnetic_field_strength"
                android:textColor="#99000000"
                android:textSize="14sp"
                android:textStyle="normal" />

            <CheckBox
                android:id="@+id/magnetic_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:checked="true" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="6sp"
            android:text="@string/keep_screen_on"
            android:textColor="#99000000"
            android:textSize="14sp"
            android:textStyle="normal" />

        <CheckBox
            android:id="@+id/keep_on_screen_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33000000"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="10sp"
            android:text="@string/advanced"
            android:textColor="#de000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="6sp"
                android:text="@string/sensor_status"
                android:textColor="#99000000"
                android:textSize="14sp"
                android:textStyle="normal" />

        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_buy_beer"
        android:id="@+id/buy_beer"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="10sp"
                android:text="@string/buy_me_a_beer"
                android:textColor="#de000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/please_support_us_to_make_it_better"
                    android:textColor="#99000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>