<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginBottom="16dp"
              android:layout_marginTop="16dp"
              android:background="@color/white"
              android:gravity="center"
              android:minWidth="250dp"
              android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8sp"
        android:text="Do you love our"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8sp"
        android:text="COMPASS PLUS ?"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cmd_no"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_button_gray"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/white"/>

        <View
            android:layout_width="16dp"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/cmd_yes"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_button_blue"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/white"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/dont_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:letterSpacing="0.04"
        android:text="@string/don_t_ask_again"
        android:textColor="#6f6f6f"
        android:textSize="14sp"
        android:textStyle="bold"
    />
</LinearLayout>