<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/layout_mega"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/magenatic_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magenatic_field"
            android:textColor="?android:textColorPrimary" />

        <TextView
            android:id="@+id/magenatic_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorPrimary"
            tools:text="125 uT" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/layout_press"
        >

        <TextView
            android:id="@+id/pressure_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_title"
            android:textColor="?android:textColorPrimary" />

        <View
            android:layout_width="4dp"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            android:textColor="?android:textColorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/layout_altitude"
        >

        <TextView
            android:id="@+id/altitude_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altitude_title"
            android:textColor="?android:textColorPrimary" />

        <View
            android:layout_width="4dp"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/altitude_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            android:textColor="?android:textColorPrimary" />

    </LinearLayout>

</LinearLayout>